--- a/index.css
+++ b/index.css
@@ -3,12 +3,21 @@
     z-index: 99999;
     position: absolute;
     top: 100px;
-    left: 200px;
+    right: 200px;
     width: 350px;
     padding: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    font-family: Cairo, sans-serif;
+    border-radius: 10px;
+    font-family: 'Cairo', sans-serif;
     background-color: white;
+    transition: all .2s ease-in-out;
+    transform: scale(1);
+}
+
+#widget-main-div:hover {
+    transition: all .2s ease-in-out;
+    transform: scale(1.01);
+    box-shadow: #34558b69 0px 0px 29px 0px;
 }
 
 #widget-div-title {
